modifications of css, changing to new color pallete

--- a/css/nivo-slider-theme.css
+++ b/css/nivo-slider-theme.css
@@ -69,16 +69,16 @@ Supports Thumbs: true
 }
 
 .layer-1-3 a.ready-btn:hover {
-  color: #fff;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  color: #dfdfdf;
+  background: #2e003e;
+  border: 1px solid #2e003e;
   text-decoration: none;
 }
 
 .ready-btn.right-btn {
   margin-right: 15px;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5 !important;
+  background: #2e003e;
+  border: 1px solid #2e003e !important;
 }
 
 .ready-btn.right-btn:hover {
@@ -370,9 +370,9 @@ preview-2
 }
 
 .preview-2 .nivo-directionNav a.nivo-nextNav:hover:before, .preview-2 .nivo-directionNav a.nivo-prevNav:hover:before {
-  border-color: #3EC1D5;
+  border-color: #2e003e;
   color: #fff;
-  background: #3EC1D5;
+  background: #2e003e;
 }
 
 .preview-2 .nivo-directionNav a.nivo-nextNav::before {
